--- a/plugin.xml
+++ b/plugin.xml
@@ -7,12 +7,14 @@
 		<clobbers target="cordova.plugins.CdvAiVoice" />
 	</js-module>
 	<platform name="ios">
+		<hook type="before_plugin_install" src="hooks/install_prerequisites.js"/>
+		<hook type="after_plugin_add" src="hooks/add_swift_support.js" />
 		<config-file parent="/*" target="config.xml">
 			<feature name="CdvAiVoice">
 				<param name="ios-package" value="CdvAiVoice" />
 			</feature>
 		</config-file>
-		<source-file src="src/ios/cordova-aivoice-plugin.m" />
+		<source-file src="src/ios/CdvAiVoice.swift" />
 	</platform>
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
