--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-aivoice-plugin" version="1.0"
+<plugin id="com.outsystems.experts.cdvaivoice" version="1.0"
 	xmlns="http://apache.org/cordova/ns/plugins/1.0"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>CdvAiVoice</name>
@@ -16,13 +16,27 @@
 		</config-file>
 		<source-file src="src/ios/CdvAiVoice.swift" />
 	</platform>
+
 	<platform name="android">
-		<config-file parent="/*" target="res/xml/config.xml">
-			<feature name="CdvAiVoice">
-				<param name="android-package" value="CdvAiVoice.cordova-aivoice-plugin" />
-			</feature>
+
+		 <config-file target="config.xml" parent="/*">
+
+            <preference name="GradlePluginKotlinEnabled" value="true" />
+            <preference name="GradlePluginKotlinVersion" value="1.6.20" />
+            <preference name="GradlePluginKotlinCodeStyle" value="official" />
+            <preference name="AndroidXEnabled" value="true"/>
+
+            <feature name="CdvAiVoice">
+                <param name="android-package" value="com.outsystems.experts.cdvaivoice.CdvAiVoice" />
+            </feature>
+
+        </config-file>
+
+		<config-file target="AndroidManifest.xml" parent="/*">
+			<uses-permission android:name="android.permission.RECORD_AUDIO" />
 		</config-file>
-		<config-file parent="/*" target="AndroidManifest.xml"></config-file>
-		<source-file src="src/android/cordova-aivoice-plugin.java" target-dir="src/CdvAiVoice/cordova-aivoice-plugin" />
+
+		<source-file src="src/android/CdvAiVoice.kt" target-dir="java/com/outsystems/experts/cdvaivoice/" />
 	</platform>
+
 </plugin>
